<resources>
    <string name="app_name">localsocialmedia</string>

    <!-- Dialog -->
    <string name="error_">Error!</string>
    <string name="ok_">OK!</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <!-- General -->
    <string name="loading_">Loading…</string>

    <!-- Login/Register -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="register_privacy"><![CDATA[Privacy & Policy]]></string>
    <string name="register_agree">I agree to</string>
    <string name="register_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="register_profile_image">Profile Image</string>
    <string name="register_please_enter_your_">Please enter your </string>

    <!-- Profile -->
    <string name="profile_image">Profile Image</string>
    <string name="profile_posts">Posts</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>

    <!-- Bottom Nav -->
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!-- Cell Texts -->
    <string name="error_refresh">Refresh</string>
    <string name="empty_string">Couldn\'t find anything.</string>

    <!-- General -->
    <string name="edit">Edit</string>
    <string name="more">More</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="report">Report</string>
    <string name="add">Add</string>
    <string name="post">Post</string>
    <string name="post_feed_hint">Whats happening?</string>
    <string name="comment_hint">What do you think?</string>
    <string name="delete">Delete</string>
    <string name="spam_information">This feed might contain misleading information!</string>
    <string name="radius_">Radius:</string>
    <string name="add_image">Add Image</string>
</resources>