<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/feedFragment"
        android:enabled="true"
        android:icon="@drawable/ic_feed_48"
        android:title="@string/feed"/>

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"/>

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person_48"
        android:title="@string/profile"
        app:showAsAction="always"/>
</menu>