<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/contentBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.authentication.RegisterFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/registerLayout">
        <TextView
            android:id="@+id/registerTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:textColor="?attr/contentTextColor"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/registerImagePickCardView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="?attr/contentBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTitleText">

            <ImageButton
                android:id="@+id/registerImagePickButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/register_profile_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_image_48_accent" />
        </androidx.cardview.widget.CardView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerNameTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/editTextHintColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerImagePickCardView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="?attr/editTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerMailTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/editTextHintColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerNameTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerMailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="?attr/editTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/editTextHintColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerMailTextLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/editTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColor="?attr/editTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordAgainTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/password_again"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/editTextHintColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordTextLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/editTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPasswordAgainEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColor="?attr/editTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordAgainTextLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_agree"
                android:textColor="?attr/contentTextColor" />

            <TextView
                android:id="@+id/privacyTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register_privacy"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/privacySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:switchMinWidth="56dp"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/registerPasswordAgainTextLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_agree"
                android:textColor="?attr/contentTextColor" />

            <TextView
                android:id="@+id/termsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register_terms"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/termsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:switchMinWidth="56dp"
                android:checked="false" />
        </LinearLayout>

        <Button
            android:id="@+id/registerRegisterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/buttonBackgroundColor"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="?attr/buttonTextColor"
            android:textSize="16sp"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/registerLoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/registerRegisterButton"
            app:layout_constraintStart_toStartOf="@+id/registerRegisterButton"
            app:layout_constraintTop_toBottomOf="@+id/registerRegisterButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>