<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/contentBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/feedAuthorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars" />

        <ProgressBar
            android:id="@+id/feedAuthorImageProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feedAuthorNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="?attr/contentTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Burak Fidan" />

            <TextView
                android:id="@+id/feedAuthorUsernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="?attr/contentTextColor"
                android:textSize="14sp"
                tools:text="MrNtlu" />
        </LinearLayout>

        <TextView
            android:id="@+id/feedPostDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:textColor="?attr/editTextHintColor"
            android:textSize="14sp"
            tools:text="20 mins ago." />
    </LinearLayout>

    <TextView
        android:id="@+id/feedBodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/contentTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        tools:text="TextView" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/feedImageViewPager"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/feedBodyText"
        app:layout_constraintStart_toStartOf="@+id/feedBodyText"
        app:layout_constraintTop_toBottomOf="@+id/feedBodyText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/feedBodyText"
        app:layout_constraintStart_toStartOf="@+id/feedBodyText"
        app:layout_constraintTop_toBottomOf="@+id/feedImageViewPager">

        <ImageButton
            android:id="@+id/feedUpVoteButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_up_arrow_48"
            android:contentDescription="@string/upvote" />

        <TextView
            android:id="@+id/feedVoteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="?attr/contentTextColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/feedUpVoteButton"
            app:layout_constraintStart_toEndOf="@+id/feedUpVoteButton"
            app:layout_constraintTop_toTopOf="@+id/feedUpVoteButton"
            tools:text="100" />

        <ImageButton
            android:id="@+id/feedDownVoteButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/feedUpVoteButton"
            app:layout_constraintStart_toEndOf="@+id/feedVoteText"
            app:layout_constraintTop_toTopOf="@+id/feedUpVoteButton"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_down_arrow_48"
            android:contentDescription="@string/downvote" />

        <ImageButton
            android:id="@+id/feedMoreButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:tint="?attr/contentTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_48"
            android:contentDescription="@string/more" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>